--- a/index.html
+++ b/index.html
@@ -4,191 +4,191 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>٦٠ حزب من القرآن الكريم</title>
-    <link href="https://fonts.googleapis.com/css2?family=Amiri:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Amiri:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <style>
         * { box-sizing: border-box; margin: 0; padding: 0; }
-        html, body {
-            overflow-x: hidden;
-            max-width: 100%;
-            min-height: 100vh;
-            background: #f9f5eb url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" opacity="0.04"><path d="M40 10 L70 70 L10 70 Z" fill="none" stroke="%23d4af37" stroke-width="1.5"/></svg>') repeat;
-            color: #0d1b2a;
+        body {
             font-family: 'Amiri', serif;
-            touch-action: manipulation;
-        }
-        body { padding: 24px; }
-
-        #progress {
-            margin-bottom: 32px;
-            text-align: center;
-            font-size: 24px;
-            color: #0d47a1;
-            font-weight: 700;
-        }
-        #progress-circle {
-            width: 120px;
-            height: 120px;
-            margin: 12px auto;
-        }
-
-        select, input {
-            width: 100%;
-            padding: 16px;
-            font-size: 20px;
-            border: 2px solid #bbdefb;
-            border-radius: 16px;
+            font-weight: 400;
+            color: #1a1a1a;               /* noir doux, très reposant pour les yeux */
             background: #ffffff;
-            margin-bottom: 20px;
-            box-shadow: 0 4px 12px rgba(13,71,161,0.08);
-            transition: all 0.3s ease;
-        }
-        select:focus, input:focus {
-            border-color: #0d47a1;
-            box-shadow: 0 0 0 4px rgba(13,71,161,0.15);
-            outline: none;
-        }
-
-        #content {
+            line-height: 2;
             direction: rtl;
+            text-align: right;
+            padding: 20px;
+            max-width: 100%;
+            overflow-x: hidden;
+        }
+        #progress {
+            margin-bottom: 25px;
+            text-align: center;
+            font-size: 22px;
+            color: #1565c0;
+        }
+        #content {
+            font-size: 24px;
             white-space: pre-wrap;
-            line-height: 2.1;
-            background: #ffffff;
-            padding: 32px;
-            border-radius: 20px;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.08);
-            transition: all 0.5s ease;
-            opacity: 0;
-            transform: translateY(15px);
+            word-wrap: break-word;
+            background: #fffef7;
+            padding: 20px;
+            border-radius: 12px;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.06);
         }
-        #content.loaded {
-            opacity: 1;
-            transform: translateY(0);
-        }
-
         .surah-title {
-            font-size: 34px;
+            font-size: 32px;
             color: #0d47a1;
             text-align: center;
-            margin: 40px 0 20px;
-            border-bottom: 3px solid #f9a825;
-            padding-bottom: 12px;
+            margin: 30px 0 20px;
+            border-bottom: 2px solid #bbdefb;
+            padding-bottom: 10px;
         }
-
+        select, button, input {
+            font-family: 'Amiri', serif;
+            font-size: 18px;
+            padding: 12px;
+            border-radius: 8px;
+            border: 1px solid #90caf9;
+            width: 100%;
+            margin: 10px 0;
+        }
         button {
-            padding: 14px 32px;
-            background: #0d47a1;
+            background: #1565c0;
             color: white;
             border: none;
-            border-radius: 16px;
-            font-size: 18px;
             cursor: pointer;
-            transition: all 0.3s ease;
-            box-shadow: 0 6px 14px rgba(13,71,161,0.25);
-            margin: 10px 6px;
         }
-        button:hover {
-            background: #002171;
-            transform: translateY(-4px);
-            box-shadow: 0 12px 24px rgba(13,71,161,0.35);
-        }
-        button.undo {
-            background: #c62828;
-        }
-        button.undo:hover {
-            background: #b71c1c;
-        }
+        button:hover { background: #0d47a1; }
+        button.undo { background: #c62828; }
+        button.undo:hover { background: #b71c1c; }
         button.reset {
             background: #f9a825;
             color: #0d1b2a;
-            width: 100%;
-            margin-top: 24px;
             font-weight: bold;
+            width: 100%;
+            margin-top: 20px;
         }
-
-        #font-size {
-            display: flex;
-            align-items: center;
-            font-size: 18px;
-            margin: 24px 0;
-            color: #424242;
-        }
-        #font-slider {
-            flex: 1;
-            margin-right: 16px;
-            accent-color: #0d47a1;
-        }
-
-        #favorites, #history {
-            margin-top: 40px;
-        }
-        .item {
-            background: #e3f2fd;
-            padding: 16px;
-            border-radius: 16px;
-            margin-bottom: 16px;
-            cursor: pointer;
-            border-right: 6px solid #f9a825;
-            transition: all 0.3s;
-        }
-        .item:hover {
-            background: #bbdefb;
-            transform: translateX(-4px);
-        }
-
-        #loading {
-            text-align: center;
-            margin: 40px 0;
-            font-size: 20px;
-            color: #757575;
-            font-style: italic;
-        }
-
-        h3 {
-            color: #0d47a1;
-            margin-bottom: 20px;
-            text-align: center;
-            font-size: 26px;
-        }
+        #loading { text-align: center; margin: 20px; color: #757575; font-style: italic; }
     </style>
 </head>
 <body>
 
     <div id="progress">
         التقدم: <span id="count">٠/٦٠</span> (<span id="percent">٠٪</span>)
-        <svg id="progress-circle" viewBox="0 0 100 100">
-            <circle cx="50" cy="50" r="45" fill="none" stroke="#e3f2fd" stroke-width="12"/>
-            <circle cx="50" cy="50" r="45" fill="none" stroke="#0d47a1" stroke-width="12" stroke-dasharray="283" stroke-dashoffset="283" id="progress-ring"/>
-        </svg>
     </div>
 
     <select id="hizbSelect" onchange="loadHizb(this.value)">
         <option value="">اختر حزبًا</option>
     </select>
 
-    <!-- Le reste de ton code (select surah, input search, font-size, content, buttons, favorites, history) reste identique -->
+    <div id="loading" style="display:none;">جاري التحميل...</div>
+
+    <div id="content"></div>
+
+    <button class="reset" onclick="resetProgress()">إعادة تعيين التقدم</button>
 
     <script>
-        // ... ton code JavaScript existant ...
+        // Colle ici ton tableau hizbRanges complet (celui de la version qui marche)
+        const hizbRanges = [ /* ... ton tableau avec les 60 hizbs ... */ ];
 
-        // Amélioration liste hizbs terminés (dans renderHizbSelect ou équivalent)
+        const surahNames = [
+            '', 'الفاتحة', 'البقرة', 'آل عمران', 'النساء', 'المائدة', 'الأنعام', 'الأعراف', 'الأنفال', 'التوبة',
+            'يونس', 'هود', 'يوسف', 'الرعد', 'إبراهيم', 'الحجر', 'النحل', 'الإسراء', 'الكهف', 'مريم', 'طه',
+            'الأنبياء', 'الحج', 'المؤمنون', 'النور', 'الفرقان', 'الشعراء', 'النمل', 'القصص', 'العنكبوت', 'الروم',
+            'لقمان', 'السجدة', 'الأحزاب', 'سبأ', 'فاطر', 'يس', 'الصافات', 'ص', 'الزمر', 'غافر', 'فصلت', 'الشورى',
+            'الزخرف', 'الدخان', 'الجاثية', 'الأحقاف', 'محمد', 'الفتح', 'الحجرات', 'ق', 'الذاريات', 'الطور', 'النجم',
+            'القمر', 'الرحمن', 'الواقعة', 'الحديد', 'المجادلة', 'الحشر', 'الممتحنة', 'الصف', 'الجمعة', 'المنافقون',
+            'التغابن', 'الطلاق', 'التحريم', 'الملك', 'القلم', 'الحاقة', 'المعارج', 'نوح', 'الجن', 'المزمل', 'المدثر',
+            'القيامة', 'الإنسان', 'المرسلات', 'النبأ', 'النازعات', 'عبس', 'التكوير', 'الانفطار', 'المطففين', 'الانشقاق',
+            'البروج', 'الطارق', 'الأعلى', 'الغاشية', 'الفجر', 'البلد', 'الشمس', 'الليل', 'الضحى', 'الشرح', 'التين',
+            'العلق', 'القدر', 'البينة', 'الزلزلة', 'العاديات', 'القارعة', 'التكاثر', 'العصر', 'الهمزة', 'الفيل',
+            'قريش', 'الماعون', 'الكوثر', 'الكافرون', 'النصر', 'المسد', 'الإخلاص', 'الفلق', 'الناس'
+        ];
+
+        let readHizbs = JSON.parse(localStorage.getItem('hizbsRead')) || [];
+
+        function updateProgress() {
+            const count = readHizbs.length;
+            const percent = (count / 60 * 100).toFixed(0);
+            document.getElementById('count').textContent = count + '/٦٠';
+            document.getElementById('percent').textContent = percent + '٪';
+        }
+
         function renderHizbSelect() {
             const select = document.getElementById('hizbSelect');
             select.innerHTML = '<option value="">اختر حزبًا</option>';
             for (let i = 1; i <= 60; i++) {
-                const opt = document.createElement('option');
-                opt.value = i;
-                opt.textContent = `الحزب ${i}`;
+                const option = document.createElement('option');
+                option.value = i;
+                option.textContent = `الحزب ${i}`;
                 if (readHizbs.includes(i)) {
-                    opt.style.backgroundColor = '#e8f5e9'; // vert très clair
-                    opt.style.color = '#1b5e20';          // texte vert foncé
-                    opt.style.fontWeight = 'bold';
-                    opt.innerHTML += ' ✓ منتهي';
+                    option.textContent += ' ✓';
                 }
-                select.appendChild(opt);
+                select.appendChild(option);
             }
         }
 
-        // Appelle cette fonction au démarrage et après mark/unmark
+        async function loadHizb(hizbNum) {
+            if (!hizbNum) return;
+            document.getElementById('loading').style.display = 'block';
+            const content = document.getElementById('content');
+            content.innerHTML = '';
+
+            try {
+                let text = '';
+                let currentSurah = 0;
+                const range = hizbRanges[hizbNum - 1];
+                for (const part of range.parts) {
+                    if (part.surah !== currentSurah) {
+                        text += `<div class="surah-title">سورة ${surahNames[part.surah]}</div>`;
+                        currentSurah = part.surah;
+                    }
+                    const response = await fetch(`https://api.alquran.cloud/v1/surah/${part.surah}/quran-uthmani`);
+                    const data = await response.json();
+                    const ayahs = data.data.ayahs;
+                    for (let a = part.start; a <= part.end; a++) {
+                        const ayah = ayahs.find(ay => ay.numberInSurah === a);
+                        if (ayah) text += ayah.text + ' ۝ ';
+                    }
+                }
+                const isRead = readHizbs.includes(Number(hizbNum));
+                let buttons = `<br><button onclick="markDone(${hizbNum})">منتهي ✓</button>`;
+                if (isRead) buttons += ` <button class="undo" onclick="unmarkDone(${hizbNum})">إلغاء ✗</button>`;
+                content.innerHTML = text + buttons;
+            } catch (e) {
+                content.innerHTML = 'حدث خطأ أثناء التحميل، جرب لاحقًا.';
+            }
+            document.getElementById('loading').style.display = 'none';
+        }
+
+        function markDone(hizbNum) {
+            if (!readHizbs.includes(hizbNum)) {
+                readHizbs.push(hizbNum);
+                localStorage.setItem('hizbsRead', JSON.stringify(readHizbs));
+                renderHizbSelect();
+                updateProgress();
+                document.getElementById('content').innerHTML = '';
+            }
+        }
+
+        function unmarkDone(hizbNum) {
+            readHizbs = readHizbs.filter(h => h !== hizbNum);
+            localStorage.setItem('hizbsRead', JSON.stringify(readHizbs));
+            renderHizbSelect();
+            updateProgress();
+            document.getElementById('content').innerHTML = '';
+        }
+
+        function resetProgress() {
+            if (confirm('هل أنت متأكد من إعادة تعيين كل التقدم؟')) {
+                readHizbs = [];
+                localStorage.setItem('hizbsRead', JSON.stringify(readHizbs));
+                renderHizbSelect();
+                updateProgress();
+                document.getElementById('content').innerHTML = '';
+            }
+        }
+
+        // Initialisation
         renderHizbSelect();
         updateProgress();
     </script>
